--- a/style.css
+++ b/style.css
@@ -11,4 +11,48 @@ body {
 
 #countdownTime {
     font-style: italic;
+}.info-toggle-container {
+    margin-top: 3vh;
+    margin-left: 3vh;
+    text-align: left;
+}
+
+.info-toggle input {
+    position: absolute;
+    opacity: 0;
+}
+
+/**
+   * 1. Adjust this to size
+   */
+
+.info-toggle {
+    display: inline-block;
+    font-size: 100%;
+    /* 1 */
+    height: 1em;
+    width: 2em;
+    border-radius: 1em;
+    border: solid 1px #000;
+}
+
+.info-toggle div {
+    height: 0.9em;
+    width: 0.9em;
+    margin-left: -0.03em;
+    border-radius: 1em;
+    border: solid 1px #000;
+    background: white;
+    box-shadow: 0 0.1em 0.3em rgba(0, 0, 0, 0.3);
+    -webkit-transition: all 300ms;
+    -moz-transition: all 300ms;
+    transition: all 300ms;
+}
+
+.info-toggle input:checked+div {
+    background: #000;
+    padding-left: 0.03em;
+    -webkit-transform: translate3d(100%, 0, 0);
+    -moz-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
 }
